import docker-1.12.5-14.el7

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-SOURCES/30bf0b874ebdda9b8d2a7adf36ce1dcbf5a67f1d.tar.gz
-SOURCES/docker-lvm-plugin-bc03b53.tar.gz
-SOURCES/docker-novolume-plugin-c521254.tar.gz
-SOURCES/docker-selinux-98617f3.tar.gz
-SOURCES/docker-storage-setup-0d53efa.tar.gz
+SOURCES/047e51b797564227b0bf26f3aa448f563bea5c71.tar.gz
+SOURCES/container-selinux-58209b8.tar.gz
+SOURCES/containerd-471f03c.tar.gz
+SOURCES/docker-lvm-plugin-8647404.tar.gz
+SOURCES/docker-novolume-plugin-385ec70.tar.gz
+SOURCES/docker-storage-setup-6709fe6.tar.gz
 SOURCES/rhel-push-plugin-eb9e6be.tar.gz
+SOURCES/runc-b8dbc3b.tar.gz
 SOURCES/v1.10-migrator-c417a6a.tar.gz
