--- a/SOURCES/docker.service
+++ b/SOURCES/docker.service
@@ -3,12 +3,13 @@ Description=Docker Application Container Engine
 Documentation=http://docs.docker.com
 After=network.target
 Wants=docker-storage-setup.service
+Requires=rhel-push-plugin.socket registries.service
 Requires=docker-cleanup.timer
 
 [Service]
 Type=notify
 NotifyAccess=all
-KillMode=process
+EnvironmentFile=-/run/containers/registries.conf
 EnvironmentFile=-/etc/sysconfig/docker
 EnvironmentFile=-/etc/sysconfig/docker-storage
 EnvironmentFile=-/etc/sysconfig/docker-network
@@ -18,6 +19,7 @@ Environment=PATH=/usr/libexec/docker:/usr/bin:/usr/sbin
 ExecStart=/usr/bin/dockerd-current \
           --add-runtime docker-runc=/usr/libexec/docker/docker-runc-current \
           --default-runtime=docker-runc \
+          --authorization-plugin=rhel-push-plugin \
           --exec-opt native.cgroupdriver=systemd \
           --userland-proxy-path=/usr/libexec/docker/docker-proxy-current \
           $OPTIONS \
@@ -25,7 +27,8 @@ ExecStart=/usr/bin/dockerd-current \
           $DOCKER_NETWORK_OPTIONS \
           $ADD_REGISTRY \
           $BLOCK_REGISTRY \
-          $INSECURE_REGISTRY
+          $INSECURE_REGISTRY\
+	  $REGISTRIES
 ExecReload=/bin/kill -s HUP $MAINPID
 LimitNOFILE=1048576
 LimitNPROC=1048576
@@ -33,6 +36,7 @@ LimitCORE=infinity
 TimeoutStartSec=0
 Restart=on-abnormal
 MountFlags=slave
+KillMode=process
 
 [Install]
 WantedBy=multi-user.target
