import docker-1.13.1-53.git774336d.el7

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-SOURCES/3e8e77dcb88db0530c839b249bea7d75f9cd01d7.tar.gz
-SOURCES/container-storage-setup-8276a1e.tar.gz
-SOURCES/containerd-fa8fb3d.tar.gz
+SOURCES/774336db27bb8931c1705e47781b3842d290c968.tar.gz
+SOURCES/container-storage-setup-e0997c3.tar.gz
+SOURCES/containerd-296f1f8.tar.gz
 SOURCES/docker-lvm-plugin-8647404.tar.gz
 SOURCES/docker-novolume-plugin-385ec70.tar.gz
+SOURCES/libnetwork-14db3c4.tar.gz
 SOURCES/rhel-push-plugin-af9107b.tar.gz
-SOURCES/runc-c5d3116.tar.gz
+SOURCES/runc-e9c345b.tar.gz
+SOURCES/tini-5b117de.tar.gz
 SOURCES/v1.10-migrator-c417a6a.tar.gz
