--- a/SOURCES/docker.service
+++ b/SOURCES/docker.service
@@ -3,6 +3,7 @@ Description=Docker Application Container Engine
 Documentation=http://docs.docker.com
 After=network.target rhel-push-plugin.socket registries.service
 Wants=docker-storage-setup.service
+Requires=rhel-push-plugin.socket registries.service
 Requires=docker-cleanup.timer
 
 [Service]
@@ -18,8 +19,10 @@ Environment=PATH=/usr/libexec/docker:/usr/bin:/usr/sbin
 ExecStart=/usr/bin/dockerd-current \
           --add-runtime docker-runc=/usr/libexec/docker/docker-runc-current \
           --default-runtime=docker-runc \
+          --authorization-plugin=rhel-push-plugin \
           --exec-opt native.cgroupdriver=systemd \
           --userland-proxy-path=/usr/libexec/docker/docker-proxy-current \
+          --init-path=/usr/libexec/docker/docker-init-current \
           --seccomp-profile=/etc/docker/seccomp.json \
           $OPTIONS \
           $DOCKER_STORAGE_OPTIONS \
@@ -34,7 +37,6 @@ LimitNPROC=1048576
 LimitCORE=infinity
 TimeoutStartSec=0
 Restart=on-abnormal
-MountFlags=slave
 KillMode=process
 
 [Install]
